--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
+
+.btn {
+  @apply shadow-md px-4 py-3 text-white font-bold rounded;
+}
+
+.btn:focus {
+  @apply outline-none;
+}
+
+.btn-primary {
+  @apply bg-primary;
+}
+
+.btn-primary:hover {
+  @apply bg-primaryMinus1 
+}
+
 @tailwind utilities;
