--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   @apply text-grayPlus2 bg-grayMinus2;
 }
 
-.btn-disabled, .btn-disabled:hover {
+.btn:disabled, .btn:disabled:hover {
   @apply bg-grayMinus2 text-gray cursor-default;
 }
 
