--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 @tailwind components;
 
 .btn {
-  @apply bg-primary shadow-md px-16 h-48 text-white font-bold rounded;
+  @apply bg-primaryPlus1 shadow-md px-16 h-48 text-white font-bold rounded;
 }
 
 .btn:focus {
@@ -15,7 +15,7 @@
 }
 
 .btn:hover {
-  @apply bg-primaryMinus1;
+  @apply bg-primary;
 }
 
 .btn-secondary {
