--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 @tailwind components;
 
 .btn {
-  @apply bg-primaryPlus1 shadow-md px-16 h-48 text-white font-bold rounded;
+  @apply bg-primaryPlus1 shadow-sm px-16 h-48 text-white font-bold rounded;
 }
 
 .btn:focus {
@@ -19,11 +19,11 @@
 }
 
 .btn-secondary {
-  @apply bg-white text-grayPlus1;
+  @apply bg-white border border-grayMinus1 text-grayPlus2;
 }
 
 .btn-secondary:hover {
-  @apply text-grayPlus2 bg-grayMinus2;
+  @apply text-grayPlus2 bg-white shadow-lg;
 }
 
 .btn:disabled,
