--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
 
 .btn:disabled,
 .btn:disabled:hover {
-  @apply bg-grayMinus2 text-gray cursor-default;
+  @apply bg-grayMinus2 shadow-none text-gray cursor-default;
 }
 
 .input {
