--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 @tailwind components;
 
 .btn {
-  @apply bg-primaryPlus1 shadow-sm px-16 h-48 text-white font-bold rounded;
+  @apply bg-primaryPlus1 shadow-sm px-16 text-white font-bold rounded;
 }
 
 .btn:focus {
